# NLU_CW

./: .env.example  .gitignore  COURSEWORK_SUMMARY.md  ENSEMBLE_PLAN.md  README.md  pyproject.toml  requirements.txt
data/: README.md  gi_tfidf_vectorizer.joblib
data/features/: gi_tfidf_vectorizer.joblib
eda/: eda.ipynb
model_cards/: ensemble_solution2_card.md  solution1_card.md  solution2_card.md
models/solution1/: imputer.joblib  meta_classifier.joblib  model_a1.joblib  scaler.joblib
notebooks/: demo_solution1.ipynb  demo_solution2.ipynb
outputs/: Group_17_A.csv  Group_17_C.csv
poster/: Makefile  README.md  beamerposter.sty  beamerthemezurichposter.sty  generate_plots.py  poster.tex  poster_requirements.md
src/: evaluate.py
src/evaluation/: evaluate.py
src/solution1/: SOLUTION1_IMPLEMENTATION_PLAN.md  hpc_documentation.md  predict.py
src/solution1/HPC_logs/: impostor_11861810.out  unmasking_11861809.out
src/solution1/results/: ci_ablation_analysis.md  dev_results.md  plot_results.py
src/solution1/slurm/: feature_extraction.sh  impostor.sh  preprocess.sh  tuning.sh  unmasking.sh
src/solution1/training/: compute_imposter.py  compute_unmasking.py  evaluate.py  feature_extraction.py  preprocess.py  train_base_models.py  train_meta_classifier.py  tune_hyperparams.py
src/solution2/: README.md  predict.py
src/solution2/bi_encoder/: README.md  config.py  model.py  predict.py  train.py  train_multiple.py
src/solution2/big_model/: README.md  __init__.py  config.py  model.py  predict.py  submit.slurm  submit_multiple.slurm  train.py  (+1 more)
(+67 files in other folders)
