[project]
name = "nlu-cw"
version = "0.1.0"
description = "NLU Coursework"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.6.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "textstat>=0.7.3",
    "lightgbm>=4.3.0",
    "spacy>=3.7.0",
    "transformers>=5.2.0",
]
